--- a/.github/workflows/main_mkjm-api.yml
+++ b/.github/workflows/main_mkjm-api.yml
@@ -24,10 +24,13 @@ jobs:
           dotnet-version: '9.x'
 
       - name: Build with dotnet
-        run: dotnet build --configuration Release
+        run: dotnet build MkjmController/MkjmController.csproj --configuration Release
 
       - name: dotnet publish
-        run: dotnet publish -c Release -o "${{env.DOTNET_ROOT}}/myapp"
+        run: dotnet publish MkjmController/MkjmController.csproj -c Release -o "${{env.DOTNET_ROOT}}/myapp"
+
+      - name: List published files
+        run: ls -la "${{env.DOTNET_ROOT}}/myapp"
 
       - name: Upload artifact for deployment job
         uses: actions/upload-artifact@v4
@@ -50,7 +53,7 @@ jobs:
         uses: actions/download-artifact@v4
         with:
           name: .net-app
-      
+
       - name: Login to Azure
         uses: azure/login@v2
         with:
@@ -66,3 +69,4 @@ jobs:
           slot-name: 'Production'
           package: .
           
+      
