--- a/.github/workflows/main_mkjm-api.yml
+++ b/.github/workflows/main_mkjm-api.yml
@@ -13,30 +13,31 @@ jobs:
   build:
     runs-on: windows-latest
     permissions:
-      contents: read #This is required for actions/checkout
+      contents: read # Required for actions/checkout
 
     steps:
-      - uses: actions/checkout@v4
+      - name: Checkout code
+        uses: actions/checkout@v4
 
-      - name: Set up .NET Core
+      - name: Set up .NET SDK
         uses: actions/setup-dotnet@v4
         with:
           dotnet-version: '9.x'
 
-      - name: Build with dotnet
-        run: dotnet build MkjmController/MkjmController.csproj --configuration Release
+      - name: Restore dependencies
+        run: dotnet restore MkjmController/MkjmController.csproj
 
-      - name: dotnet publish
-        run: dotnet publish MkjmController/MkjmController.csproj -c Release -o "${{env.DOTNET_ROOT}}/myapp"
+      - name: Build project
+        run: dotnet build MkjmController/MkjmController.csproj --configuration Release --no-restore
 
-      - name: List published files
-        run: dir "${{env.DOTNET_ROOT}}/myapp" -Recurse
+      - name: Publish project
+        run: dotnet publish MkjmController/MkjmController.csproj --configuration Release --output ./publish --no-build
 
       - name: Upload artifact for deployment job
         uses: actions/upload-artifact@v4
         with:
-          name: .net-app
-          path: ${{env.DOTNET_ROOT}}/myapp
+          name: dotnet-app
+          path: ./publish
 
   deploy:
     runs-on: windows-latest
@@ -45,14 +46,15 @@ jobs:
       name: 'Production'
       url: ${{ steps.deploy-to-webapp.outputs.webapp-url }}
     permissions:
-      id-token: write #This is required for requesting the JWT
-      contents: read #This is required for actions/checkout
+      id-token: write
+      contents: read
 
     steps:
       - name: Download artifact from build job
         uses: actions/download-artifact@v4
         with:
-          name: .net-app
+          name: dotnet-app
+          path: ./publish
 
       - name: Login to Azure
         uses: azure/login@v2
@@ -67,6 +69,4 @@ jobs:
         with:
           app-name: 'mkjm-api'
           slot-name: 'Production'
-          package: ${{env.DOTNET_ROOT}}/myapp
-          
-      
+          package: ./publish
