Update API base URLs in environment files and adjust fetch calls

--- a/mkjmwebsite/.env.production
+++ b/mkjmwebsite/.env.production
@@ -1,1 +1,1 @@
-﻿VITE_API_BASE_URL=https://mkjm-api-awcaaaarepatfjc2.uksouth-01.azurewebsites.net/api
+﻿VITE_API_BASE_URL=https://mkjm-api-awcaaaarepatfjc2.uksouth-01.azurewebsites.net
